--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngxs/storage-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
     "@wangdevops/angular-schematics": "^3.0.1",
+    "cron-parser": "^4.9.0",
     "lodash": "^4.17.21",
     "ng-zorro-antd": "16.1.0",
     "ngx-auto-unsubscribe-decorator": "^1.1.0",
