--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,10 @@
               "src/theme.less",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "cron-parser"
+            ]
           },
           "configurations": {
             "production": {
