--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngxs/storage-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
     "@wangdevops/angular-schematics": "^3.0.1",
+    "cron": "^2.4.3",
     "cron-parser": "^4.9.0",
     "lodash": "^4.17.21",
     "ng-zorro-antd": "16.1.0",
@@ -38,6 +39,7 @@
     "@angular-devkit/build-angular": "^16.0.1",
     "@angular/cli": "~16.0.1",
     "@angular/compiler-cli": "^16.0.0",
+    "@types/cron": "^2.4.0",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.14.197",
     "@types/nw.js": "^0.13.17",
