--- a/angular.json
+++ b/angular.json
@@ -43,7 +43,8 @@
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
-              "cron-parser"
+              "cron-parser",
+              "cron"
             ]
           },
           "configurations": {
